add: connection to backend

--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -10,6 +10,9 @@
     padding-left: 6.5%;
     color: white;
   }
+  .error-message {
+    padding-left: 6.5%;
+  }
   form {
     display: flex;
     flex-direction: column;
